2007-07-07 10:32 nick

    * plugins/clock/clock-lcd.c: Typo, the 8 was test code.

2007-07-06 10:50 nick

    * plugins/clock/*: Import code.
    * NEWS: update.
    * Configure.in.in: Bump GTK dependency to 2.8.0 and add cairo as
      new dependency.
    * po/*: Merge new strings.

2007-05-27 10:50 nick

	* plugins/launcher/launcher-exec.c: Define WAIT_ANY if it's not
	  available in wait.h. Reported by Daichi.

2007-05-26 12:25 nick

	* plugins/clock/clock.c: Also reschedule when the clock type changes.

2007-05-26 12:07 nick

	* plugins/clock/clock.c: Only update the clock once a minute when
	  seconds are disabled. That should give Auke a couple of minutes
	  extra laptop fun ^_^. (Does not work for the led clock because
	  we always want blinking dots).

2007-05-24 20:30 nick

	* panel/panel-item-manager.c: Rewrite some code, internal plugins
	  now need the X-XFCE-Module-Path entry in the desktop file. A
	  warning is shown if they don't have it. This to avoid wrong module
	  loading (and yes this might break internal plugins, but the plugin's
	  desktop file needs to be fixed instead!). Also fixes bug #3279.

2007-05-24 14:00 nick

	* panel/panel-item-manager.c: Improve the module warnings a bit.

2007-05-23 9:44 nick

	* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.


2007-05-22 20:34 nick

	* plugins/launcher/launcher-dialog.c: Always update the panel icon when dropping
	a desktop file in the frame.

2007-05-22 12:33 nick

	* configure.in.in, plugins/launcher/launcher-exec.c: Avoid zombie processes.

2007-03-27 16:31 nick

	* Backport trunk

2007-03-18 15:46 nick

	* libxfce4panel/xfce-hvbox.c: Mmm thought orientation was a property... Fix that.

2007-03-18 15:23 nick

	* libxfce4panel: Add visibility support to reduce the library size a bit.
        * libxfce4panel/xfce-panel-macros.h: Add macros to disable debugging for
          release builds.
	* Various code cleanups and improvements.

2007-03-18 11:40 nick
