@@ -1,3 +1,9 @@
+2007-07-08 12:00 nick
+
+    * plugins/clock/clock-digital.c: Allow markup and center the string.
+    * plugins/clock/*: Move the localtime functions into 1 util and allow
+      usage without locatime_r.
+
 2007-07-07 10:32 nick
 
     * plugins/clock/clock-lcd.c: Typo, the 8 was test code.
